--- a/web-app/src/variables.scss
+++ b/web-app/src/variables.scss
@@ -1,3 +1,5 @@
 $base-color: rgba(255, 200, 0, 1);
 $accent-color: rgba(72, 145, 255, 1);
 $accent-color-focus: #4ab3fd;
+$dark-background-image: url(/assets/img/bg/gray-stripes.png);
+$dark-color: rgba(20, 20, 20, 1);
