Improving the mobile friendliness of the navbar

--- a/web-app/src/app/app.component.html
+++ b/web-app/src/app/app.component.html
@@ -1,22 +1,4 @@
-<nav class="navbar navbar-inverse bg-inverse accent-bg">
-  <div class="container">
-    <a id="main-logo" class="navbar-brand mr-auto" routerLink="/" routerLinkActive="active">
-      Statikk
-    </a>
-
-    <div id="navbar-nav-wrapper">
-      <a class="nav-link" routerLink="/champions" routerLinkActive="active">
-        Champions
-      </a>
-      <a class="nav-link" routerLink="/team-builder" routerLinkActive="active">
-        Team Builder
-      </a>
-      <a class="nav-link" routerLink="/about" routerLinkActive="active">
-        About
-      </a>
-    </div>
-  </div>
-</nav>
+<app-navbar></app-navbar>
 
 <main id="main-content-container" class="container">
   <router-outlet></router-outlet>
