Hiding hamburger menu on large screens

--- a/web-app/src/app/core/components/navbar/navbar.component.html
+++ b/web-app/src/app/core/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
   <a class="navbar-link d-none d-md-block" routerLink="/about" routerLinkActive="active">
     About
   </a>
-  <div ngbDropdown placement="bottom-right">
+  <div ngbDropdown placement="bottom-right" class="d-md-none">
     <button id="menu-toggler" ngbDropdownToggle>
       <i class="fa fa-bars"></i>
     </button>
