STAT-38: Adding base win rates for champions by lane

--- a/web-app/src/app/features/team-builder/team-builder.component.html
+++ b/web-app/src/app/features/team-builder/team-builder.component.html
@@ -15,8 +15,7 @@
       </select>
     </div>
     <br>
-    <input type="submit" class="btn btn-primary form-control" [disabled]="!(userPickForm.get('userSummonerName').value && userPickForm.get('userLane').value)"
-      value="Go">
+    <input type="submit" class="btn btn-primary form-control" [disabled]="!userPickForm.get('userLane').value" value="Go">
   </form>
 </ng-template>
 
