STAT-26: Correcting champion matchups and adding caching

--- a/web-app/src/app/features/team-builder/team-builder.component.html
+++ b/web-app/src/app/features/team-builder/team-builder.component.html
@@ -36,7 +36,7 @@
         <div class="champion-img-wrapper p-2">
           <app-champion-image [championId]="allyChampionPick.championId"></app-champion-image>
         </div>
-        <div class="role-info-label p-2" *ngIf="allyChampionPick.lane">{{allyChampionPick.lane.name}}</div>
+        <div class="role-info-label p-2" *ngIf="allyChampionPick.lane">{{allyChampionPick.lane}}</div>
       </div>
     </div>
     <div id="central-content" class="p-2 d-flex flex-column justify-content-between">
