--- a/web-app/src/app/features/team-builder/components/champion-suggestion-group/champion-suggestion-group.component.scss
+++ b/web-app/src/app/features/team-builder/components/champion-suggestion-group/champion-suggestion-group.component.scss
@@ -23,3 +23,7 @@
 #rating-1-champions.champion-set-wrapper {
     background-color: rgba(255, 10, 10, 0.65);
 }
+
+app-champion-suggestion {
+    height: inherit;
+}
